[metadata]
name = stof
version = 0.1.0
description = various Python modules
author = André Erdmann
author_email = dywi@mailerd.de
license = MIT
url = "https://github.com/dywisor/sharktoffel"
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
python_requires = >=3.10
install_requires = file:requirements.txt
package_dir =
  =pym
packages = stof
scripts = 
